Fixed overflow problems for sidebar feed

--- a/html/files/css/sidebar.scss
+++ b/html/files/css/sidebar.scss
@@ -70,7 +70,8 @@
 
         ul {
             height: 170px;
-            overflow-y: hidden;
+            overflow: hidden;
+            position: relative;
 
             li {
                 list-style: none;
